compiler/testData/diagnostics/tests/generics/tpAsReified/NotInlineableReified.kt

fun<T1, <!REIFIED_TYPE_PARAMETER_NO_INLINE!>reified<!> T2, T3, <!REIFIED_TYPE_PARAMETER_NO_INLINE!>reified<!> T4> foo() {

}
